[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qawm"
version = "0.1.0"
description = "Quantum Archeological World Model - Computational Substrate"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Antigravity", email = "antigravity@deepmind.google"}
]
dependencies = [
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
